--- a/clase1/index.html
+++ b/clase1/index.html
@@ -1,27 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dale Don Dale 🐱‍👤</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dale Don Dale 🐱‍👤</title>
 </head>
+
 <body>
-   <header>
-    <img src="https://i.blogs.es/66b2a4/photo-1511367461989-f85a21fda167/1366_2000.jpeg" width= 500px  alt="siro">
-    <h1><strong>Name</strong> </h1>
+  <header>
+    <img src="https://i.blogs.es/66b2a4/photo-1511367461989-f85a21fda167/1366_2000.jpeg" width=500px alt="siro" id="TOP">
+    <h1><strong> Name</strong> </h1>
     <h2>Profesión</h2>
 
-    </header>
+  </header>
+  <hr>
+  <main>
+    <section>
+      <p>
+        Estudiante
+      </p>
+    </section>
     <hr>
-   <main>
-  <p>
-    Estudiante
-  </p>
-   </main>
-   <hr>
-   <footer> 
-    <h1> Y sí</h1>
-</footer>
+    <section>
+      <h2>Comienzo de mi día</h2>
+      <ol>
+        <li>Comienzo mí día a las 5:30 am y desayuno</li>
+        <li>Luego comienzo mí dia laboral
+          <ul>
+            <li> preparo unos mates</li>
+            <li>ordeno el trabajo</li>
+            <li>doy directivas</li>
+          </ul>
+        </li>
+        <li>Por la tarde entreno</li>
+        <li>a la noche programo</li>
+      </ol>
+    </section>
+    <hr>
+    <section>
+      <h3>Tabla de experencia laboral</h3>
+      <table border="1" cellpadding="10px">
+        <tr>
+            <th>Año</th>
+            <th>Lugar</th>
+            <th>Desempeño</th>
+        </tr>
+        <tr>
+            <td>2008</td>
+            <td>Bingo Quilmes</td>
+            <td>Auxiliar de Jefe de Sala</td>
+        </tr>
+        <tr>
+            <td>2012</td>
+            <td>Municipalidad de Berazategui</td>
+            <td>Director Administrativo</td>
+        </tr>
+        <tr>
+          <td>2022</td>
+          <td>Freelancer</td>
+          <td>PseudoProgramador</td>
+      </tr>
+    </table>
+    </section>
+    <hr>
+    <section></section>
+  </main>
+  <hr>
+  <footer>
+    <h1><a href="/clase2/ejemplo.html"> Ir a la pagina de Ejemplos</a></h1>
+    <h1><a href="#TOP"> Ir arriba</a></h1>
+  </footer>
 </body>
+
 </html>
